hub, cli, langchain4j: browser URLs are refs, a Vector API remedy at load, builder ranges, raw prompts start with BOS